# e2e_multi_view_matching

./: .gitmodules  LICENSE  README.md  convert_megadepth_to_scannet_format.py  eval_multi_view.py  eval_pairs.py  helpers.py  requirements.txt  train.py
assets/: matterport_test_5tuples.csv  megadepth_test_5tuples.csv  scannet_test_5tuples.csv
datasets/: matching_dataset.py  sampling.py  scannet.py
docs/: index.html
docs/static/js/: index.js
pose_optimization/multi_view/: bundle_adjust_io.py
pose_optimization/multi_view/bundle_adjustment/: CMakeLists.txt  ba_initializer.cpp  bundle_adjuster.cpp
pose_optimization/multi_view/bundle_adjustment/ba_init/: CMakeLists.txt
pose_optimization/multi_view/bundle_adjustment/ba_init/include/: ba_init.h
pose_optimization/multi_view/bundle_adjustment/ba_init/src/: ba_init.cpp
pose_optimization/multi_view/bundle_adjustment/ba_init/test/: test_ba_init.cpp
pose_optimization/multi_view/bundle_adjustment/io/: CMakeLists.txt
pose_optimization/multi_view/bundle_adjustment/io/include/: file_utils.h
pose_optimization/multi_view/bundle_adjustment/io/src/: file_utils.cpp
pose_optimization/multi_view/bundle_adjustment/problem/: CMakeLists.txt
pose_optimization/multi_view/bundle_adjustment/problem/include/: ba_problem.h
pose_optimization/multi_view/bundle_adjustment/problem/src/: ba_problem.cpp
pose_optimization/multi_view/bundle_adjustment/problem/test/: test_ba_problem.cpp
pose_optimization/two_view/: bundle_adjust_gauss_newton_2_view.py  compute_pose_error.py  estimate_relative_pose.py
